server.log

> weehours-pub@1.0.0 web
> ts-node src/server/index.ts

/home/awwaiid/tlt/projects/js/weehours-pub/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/server/web-server.ts(24,11): error TS2564: Property 'wss' has no initializer and is not definitely assigned in the constructor.

    at createTSError (/home/awwaiid/tlt/projects/js/weehours-pub/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/awwaiid/tlt/projects/js/weehours-pub/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/awwaiid/tlt/projects/js/weehours-pub/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/awwaiid/tlt/projects/js/weehours-pub/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/awwaiid/tlt/projects/js/weehours-pub/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)
    at Object.require.extensions.<computed> [as .ts] (/home/awwaiid/tlt/projects/js/weehours-pub/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1207:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1023:12)
    at Module.require (node:internal/modules/cjs/loader:1235:19) {
  diagnosticCodes: [ 2564 ]
}
